Update PlayedCards component to fix layout on smaller screens

--- a/client/src/components/OpponentIcon/OpponentIcon.scss
+++ b/client/src/components/OpponentIcon/OpponentIcon.scss
@@ -4,8 +4,14 @@
 @use '../PlayerIcon/PlayerIcon.scss';
 
 .opponent-icon {
-    padding: 0 0.25rem;
+    padding: 0 0.4rem;
     @include player-icon-container;
+    max-width: 4rem;
+    
+    @include desktop {
+        padding: 0 0.25rem;
+        max-width: unset;
+    }
     
     &__image {
         @extend .player-icon__image;
